--- a/exam-template.html
+++ b/exam-template.html
@@ -190,19 +190,89 @@ const examRow = dataRows.find(r => {
   return rowExamId === examId;
 });
 
-        if (!examRow) {
-          document.getElementById("headerTitle").textContent = "Exam Not Found";
-          return;
-        }
+if (!examRow) {
+  document.getElementById("exam-title").textContent = "Exam Not Found";
+  return;
+}
 
-        const examData = {};
-        headers.forEach((h, i) => examData[h] = (examRow[i] || "").trim());
+const examData = {};
+headers.forEach((h, i) => examData[h] = (examRow[i] || "").trim());
 
-        document.getElementById("headerTitle").textContent = examData.title || "No Title";
-        document.getElementById("pageTitle").textContent = examData.title || "Exam Details";
+// Title
+document.getElementById("exam-title").textContent = examData.title || "No Title";
+document.getElementById("pageTitle").textContent = examData.title || "Exam Details";
 
-        // TODO: here paste your section-filling logic (about, eligibility, etc.)
-        // (I can expand this if you want, but main bug is now fixed.)
+// Why box
+if (examData.why_points) {
+  document.getElementById("why-box").textContent = examData.why_points;
+}
+
+// About
+document.getElementById("about-list").innerHTML =
+  splitList(examData.about_points).map(i => `<li>${i}</li>`).join("");
+
+// Eligibility
+document.getElementById("eligibility-list").innerHTML =
+  splitList(examData.eligibility_list).map(i => `<li>${i}</li>`).join("");
+
+// Roles
+document.getElementById("roles-list").innerHTML =
+  splitList(examData.roles_list).map(i => `<li>${i}</li>`).join("");
+
+// Pattern
+document.getElementById("pattern-list").innerHTML =
+  splitList(examData.pattern_list).map(i => `<li>${i}</li>`).join("");
+
+// Dates (expects "Event: Date|Event: Date")
+const datesBody = document.querySelector("#dates-table tbody");
+if (examData.dates_table) {
+  datesBody.innerHTML = splitList(examData.dates_table)
+    .map(d => {
+      const parts = d.split(":");
+      return `<tr><td>${parts[0] || ""}</td><td>${parts[1] || ""}</td></tr>`;
+    })
+    .join("");
+}
+
+// Tips
+document.getElementById("tips-list").innerHTML =
+  splitList(examData.tips_list).map(i => `<li>${i}</li>`).join("");
+
+// Warnings
+if (examData.warnings_list) {
+  document.getElementById("warning-box").style.display = "block";
+  document.getElementById("warning-box").innerHTML =
+    splitList(examData.warnings_list).map(i => `<li>${i}</li>`).join("");
+}
+
+// Links
+if (examData.pdf_link) document.getElementById("pdf-link").href = examData.pdf_link;
+if (examData.pyq_link) document.getElementById("pyq-link").href = examData.pyq_link;
+
+// YouTube list (format: Title|URL|Title|URL)
+if (examData.youtube_list) {
+  const ytArr = splitList(examData.youtube_list);
+  const ytList = [];
+  for (let i = 0; i < ytArr.length; i += 2) {
+    ytList.push(`<li><a href="${ytArr[i+1]}" target="_blank">${ytArr[i]}</a></li>`);
+  }
+  document.getElementById("youtube-list").innerHTML = ytList.join("");
+}
+
+// Official site
+if (examData.official_website)
+  document.getElementById("official-site").href = examData.official_website;
+
+// Apply link
+if (examData.apply_link)
+  document.getElementById("apply-link").href = examData.apply_link;
+
+// Rural tip
+if (examData.rural_tip) {
+  document.getElementById("rural-tip-box").style.display = "block";
+  document.getElementById("rural-tip-text").textContent = examData.rural_tip;
+}
+
       })
       .catch(err => console.error("Error loading exam:", err));
   });
