--- a/jobs-template.html
+++ b/jobs-template.html
@@ -116,7 +116,7 @@
 
         if (centralList.length) {
           const h2 = document.createElement("h2");
-          h2.textContent = "🏛️ Central Level Exams (All India)";
+          h2.textContent = "🏛️ Central Govt Exams (All India)";
           list.appendChild(h2);
           const ul = document.createElement("ul");
           ul.className = "job-summary";
