--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Naukri Saathi - Your Sarkari Job Guide</title>
+  <title>Naukri Saathi - Your Job Guide</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
 <body>
   <header>
     <h1>Naukri Saathi</h1>
-    <p>Your Friend in the Journey to a Government Job</p>
+    <p>Your Friend in the Journey to a better Job</p>
   </header>
 
   <div class="translate-bar" id="google_translate_element"></div>
@@ -142,6 +142,7 @@
 
 </body>
 </html>
+
 
 
 
