--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
   <div class="translate-bar" id="google_translate_element"></div>
 
   <div class="search-box">
-    <input type="text" placeholder="Search for jobs, exams, or resources...">
+    <input type="text" placeholder="Search for jobs, exams or resources...">
   </div>
 
   <section class="categories">
@@ -142,6 +142,7 @@
 
 </body>
 </html>
+
 
 
 
