--- a/Index.html
+++ b/Index.html
@@ -103,6 +103,10 @@
   <h3>🎓 Graduation Jobs</h3>
   <p>Jobs for degree holders.</p>
 </div>
+    <div class="category-card" onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSe5DzqKKsH1-CaniFnSt9HguVoWJq7GsYE3BV-aOEMPpkj7cw/viewform?usp=sharing'">
+  <h3>🧭 Career Guidance Test</h3>
+  <p>Discover your career personality using the RIASEC Model. Take this short test and find your ideal career path.</p>
+</div>
     <div class="category-card" onclick="location.href='scholarships.html'">
       <h3>💰 Scholarships</h3>
       <p>Free education funding opportunities.</p>
@@ -142,6 +146,7 @@
 
 </body>
 </html>
+
 
 
 
