--- a/Index.html
+++ b/Index.html
@@ -105,7 +105,7 @@
 </div>
     <div class="category-card" onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSe5DzqKKsH1-CaniFnSt9HguVoWJq7GsYE3BV-aOEMPpkj7cw/viewform?usp=sharing'">
   <h3>🧭 Career Guidance Test</h3>
-  <p>Take this RIASEC Model test and find your ideal career path.</p>
+  <p>RIASEC Model test to find your ideal career.</p>
 </div>
     <div class="category-card" onclick="location.href='scholarships.html'">
       <h3>💰 Scholarships</h3>
@@ -146,6 +146,7 @@
 
 </body>
 </html>
+
 
 
 
