--- a/Index.html
+++ b/Index.html
@@ -107,13 +107,9 @@
   <h3>🧭 Career Guidance Test</h3>
   <p>RIASEC Model test to find your ideal career.</p>
 </div>
-    <div class="category-card" onclick="location.href='scholarships.html'">
-      <h3>💰 Scholarships</h3>
-      <p>Free education funding opportunities.</p>
-    </div>
     <div class="category-card" onclick="location.href='skills.html'">
       <h3>🛠 Skill Training</h3>
-      <p>Government skill development programs.</p>
+      <p>Skill development programs and workshops.</p>
     </div>
   </section>
 
@@ -146,6 +142,7 @@
 
 </body>
 </html>
+
 
 
 
