--- a/Skills.html
+++ b/Skills.html
@@ -63,19 +63,19 @@
     <div class="module-container">
       <div class="module-card">
         <h3>🗣 Communication & Leadership</h3>
-        <p>Build confidence, teamwork, and decision-making skills through simple activities.</p>
+        <p>Build confidence, teamwork and decision making skills through simple activities.</p>
         <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/19pJg2OnlCNyL-P_5-K8c3kxkNCCBtdm8/view?usp=sharing">Open Module</a>
       </div>
 
       <div class="module-card">
         <h3>📝 Resume Writing</h3>
-        <p>Step-by-step guide to create your first resume for jobs, scholarships, or internships.</p>
+        <p>Step by step guide to create your first resume for jobs, scholarships or internships.</p>
         <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1hObc37BvB6nBVf7yWkP44_lgia7Wuhu5/view?usp=sharing">Open Module</a>
       </div>
 
       <div class="module-card">
         <h3>💻 Excel Basics</h3>
-        <p>Learn Excel for data cleaning, VLOOKUP, pivot tables, and real-life reporting tasks.</p>
+        <p>Learn Excel for data cleaning, VLOOKUP, pivot tables and real life reporting tasks.</p>
         <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1dVc4CKHb4X6gCpSGs0SkH4nprkbbTnqZ/view?usp=sharing">Open Module</a>
       </div>
     </div>
