--- a/Skills.html
+++ b/Skills.html
@@ -7,6 +7,39 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
+    .tab-buttons {
+      display: flex;
+      justify-content: center;
+      margin: 1rem 0;
+      flex-wrap: wrap;
+    }
+    .tab-buttons button {
+      background: #e0f2f1;
+      color: #004d40;
+      border: none;
+      padding: 0.7rem 1.2rem;
+      margin: 0.4rem;
+      border-radius: 30px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .tab-buttons button.active {
+      background: #4CAF50;
+      color: white;
+      transform: scale(1.05);
+    }
+    .tab-content {
+      display: none;
+      animation: fadeIn 0.3s ease-in-out;
+    }
+    .tab-content.active {
+      display: block;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
     .module-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -51,32 +84,78 @@
 <body>
   <header>
     <h1>🛠 Skill Training</h1>
-    <p>Learn practical skills for jobs, leadership and digital literacy</p>
+    <p>Explore self-learning and trainer modules designed under SBI Youth for India Fellowship</p>
   </header>
 
   <main class="container">
-    <div class="info-box">
-      <p>These <strong>“Learn by Yourself”</strong> modules were created under the SBI Youth for India Fellowship (2024–25) with <em>the ant</em>, Chirang, Assam. 
-      They are designed for rural youth and new trainers to continue learning independently.</p>
+    <div class="tab-buttons">
+      <button class="active" onclick="openTab('learn')">🧠 Learn by Yourself</button>
+      <button onclick="openTab('trainer')">🎓 Trainer’s Guide</button>
     </div>
 
-    <div class="module-container">
-      <div class="module-card">
-        <h3>🗣 Communication & Leadership</h3>
-        <p>Build confidence, teamwork and decision making skills through simple activities.</p>
-        <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/19pJg2OnlCNyL-P_5-K8c3kxkNCCBtdm8/view?usp=sharing">Open Module</a>
+    <!-- LEARN BY YOURSELF TAB -->
+    <div id="learn" class="tab-content active">
+      <div class="info-box">
+        <p>These <strong>Learn by Yourself</strong> modules are simple, activity-based guides created for rural youth to practice essential employability skills independently.</p>
       </div>
 
-      <div class="module-card">
-        <h3>📝 Resume Writing</h3>
-        <p>Step by step guide to create your first resume for jobs, scholarships or internships.</p>
-        <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1hObc37BvB6nBVf7yWkP44_lgia7Wuhu5/view?usp=sharing">Open Module</a>
+      <div class="module-container">
+        <div class="module-card">
+          <h3>🗣 Communication & Leadership</h3>
+          <p>Build confidence, teamwork, and decision-making skills through simple activities.</p>
+          <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/19pJg2OnlCNyL-P_5-K8c3kxkNCCBtdm8/view?usp=sharing">Open Module</a>
+        </div>
+
+        <div class="module-card">
+          <h3>📝 Resume Writing</h3>
+          <p>Step-by-step guide to create your first resume for jobs, scholarships, or internships.</p>
+          <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1hObc37BvB6nBVf7yWkP44_lgia7Wuhu5/view?usp=sharing">Open Module</a>
+        </div>
+
+        <div class="module-card">
+          <h3>💻 Excel Basics</h3>
+          <p>Learn Excel for data cleaning, VLOOKUP, pivot tables, and real-life reporting tasks.</p>
+          <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1dVc4CKHb4X6gCpSGs0SkH4nprkbbTnqZ/view?usp=sharing">Open Module</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- TRAINER’S GUIDE TAB -->
+    <div id="trainer" class="tab-content">
+      <div class="info-box">
+        <p>The <strong>Trainer’s Guides</strong> are structured modules for facilitators and NGO staff to conduct workshops confidently using activity-based, low-cost methods.</p>
       </div>
 
-      <div class="module-card">
-        <h3>💻 Excel Basics</h3>
-        <p>Learn Excel for data cleaning, VLOOKUP, pivot tables and real life reporting tasks.</p>
-        <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1dVc4CKHb4X6gCpSGs0SkH4nprkbbTnqZ/view?usp=sharing">Open Module</a>
+      <div class="module-container">
+        <div class="module-card">
+          <h3>🗣 Communication & Leadership – Trainer Guide</h3>
+          <p>2-day workshop plan for developing communication and leadership through games and roleplays.</p>
+          <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1dCNsntles69GMWb5NWzrQXxuD8TeT6fI/view?usp=sharing">Open Guide</a>
+        </div>
+
+        <div class="module-card">
+          <h3>📝 Resume Writing – Trainer Guide</h3>
+          <p>Practical, 3-hour session plan for helping youth draft their first resumes step-by-step.</p>
+          <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1VtS6b8Ag1O0kWAJrgfQvLpQaCcbyes2-/view?usp=sharing">Open Guide</a>
+        </div>
+
+        <div class="module-card">
+          <h3>💻 Excel Workshop – Trainer Guide</h3>
+          <p>Detailed 2-day Excel training curriculum with Demo & Practice sheets for NGO staff.</p>
+          <a class="open-btn" target="_blank" href="https://drive.google.com/file/d/1E9Y9YuxM2mC2o55HHZD6GuU8D23ldftC/view?usp=sharing">Open Guide</a>
+        </div>
+
+        <div class="module-card">
+          <h3>📊 Excel – Final Practice Sheet</h3>
+          <p>Excel workbook for participants to practice real data cleaning and analysis.</p>
+          <a class="open-btn" target="_blank" href="https://docs.google.com/spreadsheets/d/1Wa_qJM3BLW5PK8ppWN1UxPeaQS9BvIZw/edit?usp=sharing">Open Sheet</a>
+        </div>
+
+        <div class="module-card">
+          <h3>🧩 Excel – Trainer Demo Sheet</h3>
+          <p>Pre-filled dataset for trainers to demonstrate Excel functions and data operations.</p>
+          <a class="open-btn" target="_blank" href="https://docs.google.com/spreadsheets/d/1BDUijHJWH2fJt_lCSNnefeHXpf9-ppxn/edit?usp=sharing">Open Sheet</a>
+        </div>
       </div>
     </div>
   </main>
@@ -84,5 +163,14 @@
   <footer>
     © 2025 Naukri Saathi | SBI YFI Fellowship Project | All resources are free & official
   </footer>
+
+  <script>
+    function openTab(tabId) {
+      document.querySelectorAll('.tab-buttons button').forEach(btn => btn.classList.remove('active'));
+      document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
+      document.querySelector(`button[onclick="openTab('${tabId}')"]`).classList.add('active');
+      document.getElementById(tabId).classList.add('active');
+    }
+  </script>
 </body>
 </html>
